@startuml

title __REQUEST's Class Diagram__\n

  namespace fr.insa.lyon.ifa1 {
    namespace models.request {
      class fr.insa.lyon.ifa1.models.request.Depot {
          + Depot()
          + getDepartureTime()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.request {
      class fr.insa.lyon.ifa1.models.request.Depot.Time {
          - hours : int
          - minutes : int
          - seconds : int
          + Time()
          + getHours()
          + getMinutes()
          + getSeconds()
          + getType()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.request {
      class fr.insa.lyon.ifa1.models.request.DurationPassagePoint {
          - duration : int
          + DurationPassagePoint()
          + getDuration()
          + getType()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.request {
      class fr.insa.lyon.ifa1.models.request.PassagePoint {
          + PassagePoint()
          + getAddress()
          + getType()
          + setAddress()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.request {
      enum PassagePointType {
        DELIVERY
        DEPOT
        NONE
        PICKUP
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.request {
      class fr.insa.lyon.ifa1.models.request.PlanningRequest {
          - requests : List<Request>
          + PlanningRequest()
          + PlanningRequest()
          + addRequest()
          + getDepot()
          + getPassagePoints()
          + getRequests()
          + setDepot()
          + setRequests()
      }
    }
  }
  

  namespace fr.insa.lyon.ifa1 {
    namespace models.request {
      class fr.insa.lyon.ifa1.models.request.Request {
          + Request()
          + Request()
          + getDelivery()
          + getPickup()
          + setDelivery()
          + setPickup()
      }
    }
  }
  

  fr.insa.lyon.ifa1.models.request.Depot -up-|> fr.insa.lyon.ifa1.models.request.PassagePoint
  fr.insa.lyon.ifa1.models.request.Depot o-- fr.insa.lyon.ifa1.models.request.Depot.Time : departureTime
  fr.insa.lyon.ifa1.models.request.Depot +-down- fr.insa.lyon.ifa1.models.request.Depot.Time
  fr.insa.lyon.ifa1.models.request.DurationPassagePoint -up-|> fr.insa.lyon.ifa1.models.request.PassagePoint
  fr.insa.lyon.ifa1.models.request.DurationPassagePoint o-- fr.insa.lyon.ifa1.models.request.PassagePointType : type
  fr.insa.lyon.ifa1.models.request.PassagePoint o-- fr.insa.lyon.ifa1.models.map.Intersection : address
  fr.insa.lyon.ifa1.models.request.PlanningRequest o-- fr.insa.lyon.ifa1.models.request.Depot : depot
  fr.insa.lyon.ifa1.models.request.Request o-- fr.insa.lyon.ifa1.models.request.DurationPassagePoint : delivery
  fr.insa.lyon.ifa1.models.request.Request o-- fr.insa.lyon.ifa1.models.request.DurationPassagePoint : pickup


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
